--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# IPFS data
+ipfs_data/
+ipfs_staging/
+
+CHAT.txt
+test.http
