--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@heroui/kbd": "2.2.13",
     "@heroui/link": "2.2.14",
     "@heroui/navbar": "2.2.15",
+    "@heroui/react": "^2.7.6",
     "@heroui/snippet": "2.2.18",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
@@ -24,13 +25,19 @@
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.21",
     "@react-types/shared": "3.28.0",
+    "@uiw/react-md-editor": "^4.0.6",
     "clsx": "2.1.1",
+    "ethers": "^6.13.5",
     "framer-motion": "11.15.0",
+    "ipfs-http-client": "^60.0.1",
+    "lucide-react": "^0.503.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
+    "swr": "^2.3.3",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16"
+    "tailwindcss": "3.4.16",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
