--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,14 @@ services:
     restart: unless-stopped
     environment:
       - IPFS_CORS_ALLOWED_ORIGINS=["*"]   # Enable CORS for all origins
-      - IPFS_API_CORS_ALLOWED_ORIGINS=["http://localhost:5173"]  # Allow specific origin
+      - IPFS_API_CORS_ALLOWED_ORIGINS=["http://localhost:1888"]  # Allow specific origin
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "1888:1888"
+    restart: unless-stopped
+    container_name: frontend-app
+    depends_on:
+      - ipfs
