Cập nhật tệp .gitignore để bao gồm thư mục dist. Chỉnh sửa Dockerfile để sao chép tệp đã build từ thư mục dist vào Nginx. Thêm các tệp HTML, SVG, favicon và các tệp CSS, JS vào thư mục dist, bao gồm các tệp cần thiết cho ứng dụng Vite và HeroUI.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,11 @@
-# Giai đoạn build: Sử dụng Node để build dự án Vite
-FROM node:18-alpine AS build
-
-# Thiết lập thư mục làm việc
-WORKDIR /app
-
-# Sao chép package.json và package-lock.json
-COPY package*.json ./
-
-# Cài đặt dependencies
-RUN npm install
-
-# Sao chép toàn bộ mã nguồn
-COPY . .
-
-# Build dự án
-RUN npm run build
-
-# Giai đoạn production: Sử dụng Nginx để phục vụ các tệp đã build
+# Sử dụng Nginx để phục vụ các tệp đã build sẵn
 FROM nginx:alpine
 
 # Xóa cấu hình nginx mặc định
 RUN rm -rf /usr/share/nginx/html/*
 
-# Sao chép các tệp đã build từ giai đoạn build vào thư mục html của nginx
-COPY --from=build /app/dist /usr/share/nginx/html
+# Sao chép các tệp đã build từ máy local vào thư mục html của nginx
+COPY ./dist /usr/share/nginx/html
 
 # Cấu hình nginx để phục vụ ứng dụng SPA và chạy trên port 1888
 RUN echo 'server { \
