--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     ports:
       - "4001:4001"       # Libp2p swarm (peer-to-peer)
       - "5001:5001"       # API
-      - "8080:8080"       # Gateway (HTTP content access)
+      - "8088:8080"       # Gateway (HTTP content access)
     volumes:
       - ./ipfs_staging:/export            # optional for exporting files
       - ./ipfs_data:/data/ipfs            # persistent IPFS storage
     restart: unless-stopped
     environment:
       - IPFS_CORS_ALLOWED_ORIGINS=["*"]   # Enable CORS for all origins
-      - IPFS_API_CORS_ALLOWED_ORIGINS=["*"]  # Allow specific origin
+      - IPFS_API_CORS_ALLOWED_ORIGINS=["https://demonhom4.testtoolv2.shop/"]  # Allow specific origin
     networks:
       - web3-network
   frontend:
